<resources>
    <string name="app_name">WalletKu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="login">Login</string>
    <string name="digi">Digi</string>
    <string name="pay">Pay</string>
    <string name="slogan">your payment solution</string>
    <string name="username">Username</string>
    <string name="password">Password Baru</string>
    <string name="password_lama">Password Lama</string>
    <string name="ulangi_password">Ulangi Password Baru</string>
    <string name="ulangi_password_reg">Ulangi Password</string>
    <string name="no_connection">Tidak ada sambungan Internet</string>
    <string name="nm_pemilik_rek">Nama Pemilik Rekening</string>
    <string name="nm_penerima">Nama Penerima</string>
    <string name="norek">Nomor Rekening</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="jml_transfer">Jumlah Transfer</string>
    <string name="norek_tujuan">Rekening Tujuan</string>
    <string name="daftar">Daftar</string>
    <string name="terms">Saya menyetujui persyaratan yang tertulis berikut</string>
    <string name="firtsName">Nama</string>
    <string name="nama_kartu">Name on Card</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="address">Alamat</string>
    <string name="tidak_dapat_terhubung_ke_server">Tidak dapat terhubung ke server pusat, Mohon mencoba kembali.</string>
    <string name="no_refferal">No Refferal(Harap kosongkan jika tidak punya refferal id)</string>
    <string name="secur_code">Security COde</string>
    <string name="kolom_pendaftaran">Kolom Pendaftaran</string>
    <string name="kirim">Kirim</string>
    <string name="users">Tentukan langganan anda</string>
    <string name="lupa_pass">Lupa Password?</string>
    <string name="title_activity_forgot_password">Lupa Password</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="credit_card">Credit Card</string>
    <string name="pilih">Pilih</string>
    <string name="select">Select</string>
    <string name="selected">Unselected</string>
    <string name="pilih_status">Pilih Status</string>
    <string name="masukan_no_tlp">Masukan nomor handphone</string>
    <string name="masukan_no_meter">Masukan nomor Meter</string>
    <string name="simpan">Simpan</string>
    <string name="ganti_pin">Ganti Pin</string>
    <string name="ganti_pass">Ganti Password</string>
    <string name="sisa_saldo">Sisa saldo anda Rp. 50.000</string>
    <string name="no_ktp">No KTP</string>
    <string name="no_hp">No HP</string>
    <string name="satuan_unit">Satuan Unit = GB</string>
    <string name="no_rekening">No Rekening</string>
    <string name="no_meter">No Meter</string>
    <string name="notif_transaksi">Notifikasi Transaksi</string>
    <string name="no_kartu">Card Numbers</string>
    <string name="pin_lama">Pin Lama</string>
    <string name="pin">Pin Baru</string>
    <string name="ulangi_pin">Ulangi Pin Baru</string>
    <string name="exp_date">Expiration Date</string>
    <string name="data_pembayaran">Data Pembayaran</string>
    <string name="komfirmasi">Konfirmasi</string>
    <string name="pilih_provider">Pilih Provider</string>
    <string name="nominal">Nominal</string>
    <string name="home">Home</string>
    <string name="beli_pulsa">Beli Pulsa</string>
    <string name="pesan_hotel">Pesan Hotel</string>
    <string name="tiket_pesawat">Tiket Pesawat</string>
    <string name="detail_pemesanan">Detail Pemesanan</string>
    <string name="detail_hotel">Detail Hotel</string>
    <string name="data_pemesan">Data Pemesan</string>
    <string name="check_in">Check - In:</string>
    <string name="date_depart">Date Depart</string>
    <string name="check_out">Check - Out:</string>
    <string name="date_return">Date Return</string>
    <string name="cari">Cari</string>
    <string name="kembali">Kembali</string>
    <string name="jml_kamar">Jumlah Kamar</string>
    <string name="adult">Adult</string>
    <string name="tamu">Tamu</string>
    <string name="child">Child</string>
    <string name="infant">Infant</string>
    <string name="nama_hotel">Nama Hotel</string>
    <string name="non_garuda">1 - 23 Month(Non Garuda)</string>
    <string name="optional">(Optional)</string>
    <string name="departure">Departure</string>
    <string name="maskapai">Silahkan pilih maskapai kepercayaan Anda!</string>
    <string name="destination">Destination</string>
    <string name="choose_destination">Choose Destination</string>
    <string name="choose_departure">Choose Departure</string>
    <string name="tittle_hotel">Cari hotel di dekat kota, landmark atau Bandara</string>
    <string name="fitur_proses_pengembangan">Fitur ini sedang dalam proses pengembangan</string>
    <string name="fitur_proses_pengembangan_wallet">Fitur ini sedang dalam proses pengembangan, silahkan melakukan transaksi melalui Transfer Bank.</string>
    <string name="reguler">Reguler</string>
    <string name="premium">Premium</string>
    <string name="one_way">One Way</string>
    <string name="two_way">Return</string>
    <string name="alert_dialog_reguler">1. Biaya Pendaftaran Gratis. \n2. Tidak ada deposit minimal. \n3. Saldo dapat di gunakan ke seluruh fitur di walletku.</string>
    <string name="alert_dialog_premium">1. Biaya Pendaftaran Gratis. \n2. Deposit Minimun Rp. 1.000.000. 3. Mendapatkan Spanduk toko. \n4. Harga Lebih Murah dari pada Normal User. \n5. Berkesempatan mendapatkan Point Reward. \n6. Dapat merekrut premium user di bawah anda.</string>
    <!-- Home Page-->
    <string name="topup">Top Up</string>
    <string name="topup_pulsa">Topup Pulsa</string>
    <string name="topup_listrik">Pembayaran Bulanan</string>
    <string name="bayar_hotel">Pesan Hotel</string>
    <string name="bayar_ticket_pesawat">Pesan Tiket Pesawat</string>
    <string name="title_activity_topup_wallet">Topup Wallet</string>

    <!-- My Wallet -->
    <string name="my_wallet">My Wallet</string>
    <string name="dompet_digital">Selamat datang di dompet digital Anda.</string>
    <string name="mengetahui_total_saldo">untuk mengetahui total saldo dan</string>
    <string name="jml_voucher">Jumlah voucher yang Anda miliki</string>
    <string name="bonus_saldo">Bonus Saldo</string>
    <string name="total_bonus">Total Bonus</string>
    <string name="total_saldo">Total Saldo</string>
    <string name="total_point">Total Point</string>
    <string name="tukar_bonus">Tukarkan Bonus</string>
    <string name="tukar_point">Tukarkan Point</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_topup_pulsa">Topup Pulsa</string>
    <string name="title_activity_bayar_listrik">Topup Listrik</string>

    <!-- navigation drawer item labels  -->
    <string name="pin_dan_password">Pin dan Password</string>
    <string name="ganti_pin_dan_password">Ganti Pin dan Password</string>
    <string name="Topup_wallet">Topup Wallet</string>
    <string name="konf_trans_pembayaran">Konfirmasi Transfer Pembayaran</string>
    <string name="call_us">Call Us</string>
    <string name="logout">Logout</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="nav_drawer_labels">
        <item> </item>
        <item>@string/profile</item>
        <item>@string/pin_dan_password</item>
        <item>@string/Topup_wallet</item>
        <item>@string/konf_trans_pembayaran</item>
        <item>@string/call_us</item>
        <item>@string/logout</item>
    </string-array>
    <string name="title_activity_main_menu">Menu</string>
    <string name="title_activity_main_menu_baru">Main Menu</string>
    <string name="title_activity_pin_dan_pssword">Pin dan Password</string>
    <string name="title_activity_profiles">My Profile</string>
    <string name="title_activity_call_us">Call Us</string>
    <string name="title_activity_konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="pembayaran">Pembayaran</string>

    <string-array name="provider_list_name">
        <item>Simpati</item>
        <item>As</item>
        <item>M</item>
        <item>IM3</item>
        <item>Star One</item>
        <item>Flexi</item>
        <item>Fren</item>
        <item>XL Regular</item>
        <item>XL XTRA</item>
        <item>XL Bicara</item>
        <item>XL SMS</item>
        <item>XL Sapa</item>
        <item>Three</item>
    </string-array>

    <string-array name="nominal_list">
        <item>5000</item>
        <item>10000</item>
        <item>20000</item>
        <item>30000</item>
        <item>50000</item>
        <item>100000</item>
    </string-array>

    <string-array name="nominal_list_three">
        <item>1000</item>
        <item>3000</item>
        <item>5000</item>
        <item>10000</item>
        <item>20000</item>
        <item>30000</item>
        <item>50000</item>
        <item>100000</item>
    </string-array>

    <string-array name="nominal_bolt">
        <item>25000</item>
        <item>50000</item>
        <item>100000</item>
        <item>150000</item>
        <item>200000</item>
    </string-array>

    <string-array name="status_list">
        <item>real</item>
        <item>success</item>
        <item>failed</item>
        <item>pending</item>
    </string-array>

    <string-array name="search_tittle_list">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
    </string-array>

    <string-array name="jenis_identitas_lis">
        <item>KTP</item>
        <item>SIM</item>
        <item>Paspor</item>
    </string-array>

    <string-array name="count_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="adult_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="title_activity_dialog_pin_npass">DialogPinNPassActivity</string>
    <string name="title_activity_serial_number_pln">Serial Number</string>
    <string name="title_search_result">Hasil Pencarian</string>
</resources>
