<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_wallet" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sisa_saldo"
                    android:textColor="@color/yellow"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/beli_pulsa"
                    android:textColor="@color/yellow"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/pilih_provider" />

                <Spinner
                    android:id="@+id/SpinnerProvider"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/edittext_border_yellow"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/nominal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/edittext_border_yellow"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/SpinnerNominal"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvSatuanUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/satuan_unit"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/no_hp" />

                <EditText
                    android:id="@+id/edtNoHp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/edittext_border_yellow"
                    android:hint="@string/masukan_no_tlp"
                    android:inputType="number"
                    android:padding="15dp"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/pilih_status"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/SpinnerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edittext_border_yellow"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnKirim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_border_white"
                    android:text="@string/kirim" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>